--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "string_view": "cpp",
         "unordered_map": "cpp",
         "vector": "cpp",
-        "unordered_set": "cpp"
+        "unordered_set": "cpp",
+        "algorithm": "cpp"
     }
 }
