--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,7 +22,8 @@
         "iosfwd": "cpp",
         "__locale": "cpp",
         "ios": "cpp",
-        "__tree": "cpp"
+        "__tree": "cpp",
+        "iostream": "cpp"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
